style input type search

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
 
 
-    <link href="./Hover-master/css/hover-min.css" rel="stylesheet">
+    <!-- <link href="./Hover-master/css/hover-min.css" type="text/html" rel="stylesheet"> -->
   </head>
   <body>
 
